--- a/src/global.css
+++ b/src/global.css
@@ -28,10 +28,10 @@ a:hover {
 }
 
 body {
-  margin: 0;
   display: flex;
-  max-width: 640px;
-  min-height: 100vh;
+  align-items: center;
+  max-width: 1100px;
+  max-height: 100vh;
 }
 
 h1 {
